# eitaro

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  test.sh
image/: icon64.xcf
migrations/2020-02-17-054821_create_definitions/: down.sql  up.sql
migrations/2020-02-17-070434_create_aliases/: down.sql  up.sql
migrations/2020-02-17-071809_create_lemmatizations/: down.sql  up.sql
migrations/2020-02-17-072411_create_levels/: down.sql  up.sql
migrations/2020-02-18-065155_create_tags/: up.sql
migrations/2020-02-20-235758_add_text_column_to_definitions/: down.sql  up.sql
migrations/2022-01-28-033935_add_source_column/: down.sql  up.sql
src/: args.rs  correction.rs  delay.rs  dictionary.rs  errors.rs  gui.rs  http.rs  main.rs  pager.rs  path.rs  store.rs  str_utils.rs  types.rs
src/command/: analyze.rs  builder.rs  completions.rs  database.rs  export.rs  html.rs  http.rs  lemmas.rs  lemmatize.rs  level.rs  lookup.rs  mod.rs  path.rs  terminal.rs  untypo.rs  wordle.rs  words.rs
src/command/export/: csv.rs
src/db/: mod.rs  model.rs  schema.rs
src/loader/: csv.rs  eijiro.rs  ejdic.rs  gene.rs  json_simple_key_value.rs  mod.rs
src/parser/: eijiro.rs  ejdic.rs  gene.rs  mod.rs  utils.rs
src/printer/: html.rs  mod.rs  parser.rs  terminal.rs
src/screen/: color.rs  curses.rs  gui.rs  mod.rs  parser.rs  plain.rs  standard.rs
webext/: manifest.json
webext/html/: option.html
webext/js/: content.js  option.js
