[package]
name = "eitaro"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[dependencies]
actix = "*"
actix-cors = "0.1.0"
actix-web = "1.0"
app_dirs = "*"
array_tool = "*"
askama_escape = "*"
bincode = "*"
clap = "*"
csv = "*"
deco = "*"
easycurses = "*"
encoding = "*"
failure = "*"
failure_derive = "*"
heck = "0.3.0"
hyper = "0.10.*"
if-let-return = "*"
lmdb = "*"
nickel = "*"
pom = "1.1.*"
regex = "*"
rustyline = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
termsize = "0.1"
unicase = "1.0.*"
unicode-jp = "*"

[dependencies.kv]
version = "*"
features = ["bincode-value"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]


