[package]
name = "eitaro"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[dependencies]
actix = "*"
actix-cors = "0.1.0"
actix-web = "1.0"
app_dirs = "*"
array_tool = "*"
askama_escape = "*"
bincode = "*"
clap = "*"
closet = "*"
csv = "*"
deco = "*"
easycurses = "*"
encoding = "*"
failure = "*"
failure_derive = "*"
gdk = "*"
glib = "*"
heck = "0.3.0"
hyper = "0.10.*"
if-let-return = "*"
lazy-init = "*"
lmdb = "*"
nickel = "*"
pom = "1.1.*"
regex = "*"
rustyline = "*"
separator = "0.3.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
strsim = "*"
termsize = "0.1"
unicase = "1.0.*"
unicode-jp = "*"

# https://github.com/gtk-rs/gtk/blob/master/Cargo.toml
[dependencies.gtk]
version = "^0.5"
features = ["v3_22_30"]

[dependencies.kv]
version = "*"
features = ["bincode-value"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
